--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,34 @@
 # Ignore all local history of files
 .history
 
-# End of https://www.gitignore.io/api/visualstudiocode
-
 *.bs.js
+
+### OCaml ###
+*.annot
+*.cmo
+*.cma
+*.cmi
+*.a
+*.o
+*.cmx
+*.cmxs
+*.cmxa
+
+# ocamlbuild working directory
+_build/
+
+# ocamlbuild targets
+*.byte
+*.native
+
+# oasis generated files
+setup.data
+setup.log
+
+# Merlin configuring file for Vim and Emacs
+.merlin
+
+reason-react/node_modules
+reason-react/lib
+reason-basics/node_modules
+reason-basics/lib
