--- a/reason-react/package.json
+++ b/reason-react/package.json
@@ -1,14 +1,10 @@
 {
   "name": "devoxx-reasonml",
   "version": "0.1.0",
+  "main": "src/Index.bs.js",
   "scripts": {
-    "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
-    "clean": "bsb -clean-world",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack -w",
-    "webpack:production": "NODE_ENV=production webpack",
-    "server": "webpack-dev-server"
+    "webpack": "webpack-dev-server",
+    "bsb": "bsb -clean-world -make-world -w"
   },
   "keywords": [
     "BuckleScript"
