--- a/reason-react/package.json
+++ b/reason-react/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "reason-react": ">=0.4.0"
+    "reason-react": ">=0.4.0",
+    "style-ext-html-webpack-plugin": "^4.0.1"
   },
   "devDependencies": {
     "bs-platform": "^4.0.7",
