--- a/reason-react/package.json
+++ b/reason-react/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bs-css": "^8.0.3",
     "react": "^16.2.0",
+    "react-click-outside": "github:tj/react-click-outside",
     "react-dom": "^16.2.0",
     "reason-react": ">=0.4.0"
   },
