--- a/reason-react/package.json
+++ b/reason-react/package.json
@@ -15,13 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "bs-css": "^8.0.3",
-    "react": "^16.2.0",
+    "react": "16.8.6",
     "react-click-outside": "github:tj/react-click-outside",
-    "react-dom": "^16.2.0",
-    "reason-react": ">=0.4.0"
+    "react-dom": "16.8.6",
+    "reason-react": "0.7.0"
   },
   "devDependencies": {
-    "bs-platform": "^4.0.7",
+    "bs-platform": "5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
