--- a/reason-react/bsconfig.json
+++ b/reason-react/bsconfig.json
@@ -15,6 +15,11 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react", "bs-css"],
+  "bs-dependencies": [
+    "reason-react",
+    "bs-css",
+    "@glennsl/bs-jest",
+    "bs-react-test-renderer"
+  ],
   "refmt": 3
 }
