--- a/reason-react/bsconfig.json
+++ b/reason-react/bsconfig.json
@@ -15,6 +15,6 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react", "bs-css"],
+  "bs-dependencies": ["reason-react",  "reason-test-framework", "bs-css"],
   "refmt": 3
 }
