--- a/reason-react/package.json
+++ b/reason-react/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "devoxx-reasonml",
+  "name": "reasonml-demo",
   "version": "0.1.0",
   "main": "src/Index.bs.js",
   "description": "Simple demo project to introduce ReasonML used in a ReactJS application",
   "scripts": {
     "webpack": "webpack-dev-server",
     "bsb": "bsb -clean-world -make-world -w",
+    "clean": "bsb -clean-world",
     "test": "jest"
   },
   "keywords": [
@@ -16,7 +17,8 @@
   "author": "Amélie Benoit",
   "license": "MIT",
   "dependencies": {
-    "bs-css": "12.2.0",
+    "bs-css": "^13.4.0",
+    "bs-css-emotion": "^2.4.0",
     "react": "16.8.1",
     "react-click-outside": "github:tj/react-click-outside",
     "react-dom": "16.8.1",
